    - Reduced cost of mud landfill
    - Hid settings from other mods that have no effect with Sea Block
  Bugfixes:
    - Fixed crash when Train Construction Site is enabled
    - Fixed Forage for cellulose fiber recipe not usable with mods that replace the default character
  Info:
    - A Sea Block Config mod has been merged in and should be removed
---------------------------------------------------------------------------------------------------
Version: 0.5.2
Date: 11.01.2021
  Changes:
    - Cleared fuel value from disabled fluids
    - Standardise research time for startup techs
    - Removed Bob's Chemical furnaces. Recipes moved to Angel's Chemical furnaces
    - Metal mixing furnace recipes moved to Sintering oven or Blast furnace
    - Stone metal mixing furnaces are available at the start of the game
    - Bob's assembling machines mod setting Fluid burning furnaces defaults to false
    - Renamed Brass and Bronze processing techs
    - Tidied up tech prerequisites
    - Raw gem recipes unlocked by Geode crystallization 1
    - Alien artifact recipes unlocked by Alien bio processing 3
    - Reshuffled early game smelting technologies and recipe unlocks
    - Disabled recipes Silicon > Glass and Silver ore > Silver plate
    - Removed recipe Carbon > Carbon Dioxide
    - Moved garden duplication recipes to Alien farming
    - Added bio science to relevant techs
    - Moved Small storage tanks to Fluid control
    - Removed empty technologies
    - Moved Manganese techs down a tier
    - Moved Silicon techs up a tier
    - Moved Nickel techs up a tier
  Bugfixes:
    - Fixed crash in tutorial when SCT was not enabled
    - Cellulose Pulp was not usable as intermediate when hand crafting
    - Fixed Total raw tooltip for Basic circuit board
    - Fixed Electric engine tech did not require Engine
---------------------------------------------------------------------------------------------------
Version: 0.5.1
Date: 23.12.2020
  Bugfixes: