@@ -16,7 +16,8 @@
     "boblogistics",
     "angelssmelting",
     "bobplates",
-    "? KS_Power_quickfix",
+    "? KS_Power",
+    "(?) KS_Power_quickfix",
     "? LandfillPainting",
     "? ScienceCostTweakerM >= 1.1.5",
     "? SpaceMod"
