@@ -32,7 +32,7 @@
     "CircuitProcessing",
     "Explosive Excavation",
     "FNEI",
-    "KS_Power_quickfix",
+    "KS_Power",
     "LandfillPainting",
     "ScienceCostTweakerM",
     "SeaBlock",
