@@ -20,6 +20,7 @@ Date: ???
     - Fixed Forage for cellulose fiber recipe not usable with mods that replace the default character
   Info:
     - A Sea Block Config mod has been merged in and should be removed
+    - KS Power mod has been updated for 1.1 so can be installed instead of the patched version ⚡KS Power_quickfix
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.2
 Date: 11.01.2021
